--- a/src/main/webapp/mobile/asset/onlineregs/buban/buban.html
+++ b/src/main/webapp/mobile/asset/onlineregs/buban/buban.html
@@ -88,7 +88,7 @@
     $('#continue').click(function () {
         if ($('#weuiAgree').get(0).checked) {
             console.log("选中");
-            window.location.href = "../again/index.html";
+            window.location.href = "../business.html?type=5";
             // window.location.href = "order/registration.html";
         }
         //关闭弹层
