--- a/src/main/webapp/mobile/asset/onlineregs/stop/stop.html
+++ b/src/main/webapp/mobile/asset/onlineregs/stop/stop.html
@@ -85,7 +85,7 @@
     $('#continue').click(function () {
         if ($('#weuiAgree').get(0).checked) {
             console.log("选中");
-            window.location.href = "index.html";
+            window.location.href = "index.html?";
             // window.location.href = "order/registration.html";
         }
         //关闭弹层
