--- a/src/main/webapp/mobile/asset/onlineregs/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/index.html
@@ -103,6 +103,14 @@
 				歇业
 			</p>
 		</a>
+		<a href="transact/index.html" class="weui-grid js_grid" style="background-color:#a07eee">
+			<div class="weui-grid__icon">
+				<img src="../images/xieye.png" alt="">
+			</div>
+			<p class="weui-grid__label">
+				test
+			</p>
+		</a>
 	</div>
 
 </body>
