--- a/src/main/webapp/mobile/asset/onlineregs/biangen/index.html
+++ b/src/main/webapp/mobile/asset/onlineregs/biangen/index.html
@@ -19,7 +19,14 @@
 			margin-top: 1em;
 			margin-bottom: 1em;
 		} */
-		body, html,#allmap {width: 100%;height: 70%;margin:0;font-family:"微软雅黑";}
+		body,
+		html,
+		#allmap {
+			width: 100%;
+			height: 70%;
+			margin: 0;
+			font-family: "微软雅黑";
+		}
 
 		input {
 			padding: .5em;
@@ -30,6 +37,7 @@
 			padding: .5em;
 			margin: .5em;
 		}
+
 		/*This is the div within which the signature canvas is fitted*/
 		#signature {
 			/*height:250px;*/
@@ -62,7 +70,8 @@
 			fill: currentColor;
 			overflow: hidden;
 		}
-		.p1{
+
+		.p1 {
 			color: red;
 		}
 	</style>
@@ -71,62 +80,61 @@
 <body>
 	<div class="weui-cells__title">您的基本信息</div>
 
-
-		<a class="weui-cell weui-cell_access" onclick="setActionSheet('identity')" href="javascript:;">
-			<div id="img1" name="0" class="weui-panel__bd">
-			</div>
-			<div class="weui-cell__bd">
-				<p>变更企业名称/个体工商户字号：</p>
-				<p class="p1">(工商营业执照登记的"名称"发生改变，需要提供工商营业执照)</p>
-			</div>
-			<div id="bg1" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
-					<use xlink:href="#icon-paizhao"></use>
-				</svg></div>
-		</a>
-		<a class="weui-cell weui-cell_access" onclick="setActionSheet('conIdentity')" href="javascript:;">
-			<div id="img2" name="0" class="weui-panel__bd">
-			</div>
-			<div class="weui-cell__bd">
-				<p>变更经营者姓名</p>
-				<p class="p1">(持证人未改变，持证人身份证登记的"姓名"发生改变，需提供公安部门出具的姓名变更证明)</p>
-			</div>
-			<div id="bg3" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
-					<use xlink:href="#icon-paizhao"></use>
-				</svg></div>
-		</a>
-		<a class="weui-cell weui-cell_access" onclick="setActionSheet('conIdentity')" href="javascript:;">
-			<div id="img3" name="0" class="weui-panel__bd">
-			</div>
-			<div class="weui-cell__bd">
-				<p>变更法定代表人(负责人)</p>
-				<p class="p1">(法定代表人或者其他组织负责人发生改变，需提供工商营业执照及法定代表人或其他组织负责人变更证明文件)</p>
-			</div>
-			<div id="bg4" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
-					<use xlink:href="#icon-paizhao"></use>
-				</svg></div>
-		</a>
-		<a class="weui-cell weui-cell_access" onclick="setActionSheet('conIdentity')" href="javascript:;">
-			<div id="img4" name="0" class="weui-panel__bd">
-			</div>
-			<div class="weui-cell__bd">
-				<p>变更经营地址名称</p>
-				<p class="p1">(经营地址未改变，经营地址的名称发生改变，需提供社区或政府相关部门的地址名称变更证明)</p>
-			</div>
-			<div id="bg5" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
-					<use xlink:href="#icon-paizhao"></use>
-				</svg></div>
-		</a>
-		<a class="weui-cell weui-cell_access" onclick="setActionSheet('conIdentity')" href="javascript:;">
-			<div id="img5" name="0" class="weui-panel__bd">
-			</div>
-			<div class="weui-cell__bd">
-				<p>变更家庭经营成员</p>
-				<p class="p1">(工商营业执照"组成形式"为"家庭成员"的个体商户，持证人在家庭成员间变化的，需提供工商营业执照及工商所出具的家庭成员备案信息证明)</p>
-			</div>
-			<div id="bg6" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
-					<use xlink:href="#icon-paizhao"></use>
-				</svg></div>
-		</a>
+	<a class="weui-cell weui-cell_access" onclick="setActionSheet('bg1')" href="javascript:;">
+		<div id="img1" name="0" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p>变更企业名称/个体工商户字号：</p>
+			<p class="p1">(工商营业执照登记的"名称"发生改变，需要提供工商营业执照)</p>
+		</div>
+		<div id="bg1" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
+	<a class="weui-cell weui-cell_access" href="javascript:;">
+		<div id="img2" name="0" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<input class="weui-input" id="name" type="text" placeholder="输入变更后经营者姓名">
+			<p class="p1">(持证人未改变，持证人身份证登记的"姓名"发生改变，需提供公安部门出具的姓名变更证明)</p>
+		</div>
+		<div id="bg2" onclick="setActionSheet('bg2')" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
+	<a class="weui-cell weui-cell_access" onclick="setActionSheet('bg3')" href="javascript:;">
+		<div id="img3" name="0" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p>变更法定代表人(负责人)</p>
+			<p class="p1">(法定代表人或者其他组织负责人发生改变，需提供工商营业执照及法定代表人或其他组织负责人变更证明文件)</p>
+		</div>
+		<div id="bg3" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
+	<a class="weui-cell weui-cell_access" href="javascript:;">
+		<div id="img4" name="0" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<input class="weui-input" id="name" type="text" placeholder="输入变更后经营地址名称">
+			<p class="p1">(经营地址未改变，经营地址的名称发生改变，需提供社区或政府相关部门的地址名称变更证明)</p>
+		</div>
+		<div id="bg4" onclick="setActionSheet('bg4')" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
+	<a class="weui-cell weui-cell_access" onclick="setActionSheet('bg5')" href="javascript:;">
+		<div id="img5" name="0" class="weui-panel__bd">
+		</div>
+		<div class="weui-cell__bd">
+			<p>变更家庭经营成员</p>
+			<p class="p1">(工商营业执照"组成形式"为"家庭成员"的个体商户，持证人在家庭成员间变化的，需提供工商营业执照及工商所出具的家庭成员备案信息证明)</p>
+		</div>
+		<div id="bg5" class="weui-cell__ft"><svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-paizhao"></use>
+			</svg></div>
+	</a>
 	</div>
 
 
@@ -187,46 +195,44 @@
 
 		var licenseImg = [];
 
-		$.post('/ycglj/mobile/user/getUserAuthen.do', {
+		// $.post('/ycglj/mobile/user/getUserAuthen.do', {
 
-		}, function (data) {
-			// if (data == 3) {
-			// 	$.alert({
-			// 		title: "提示",
-			// 		text: "你的资料正在审核中,不能重复提交",
-			// 		onOK: function () {
-			// 			//点击确认
-			// 			location.href = "/ycglj/mobile/asset";
-			// 		}
-			// 	});
-			// } else if (data == 1) {
-			// 	$.alert({
-			// 		title: "提示",
-			// 		text: "你的资料审核",
-			// 		onOK: function () {
-			// 			//点击确认
-			// 			location.href = "/ycglj/mobile/asset";
-			// 		}
-			// 	});
-			// }
-		});
-		function getLicense(license) {
-			setActionSheet("license", license);
-			licenseImg.push("img" + license);
-		}
+		// }, function (data) {
+		// if (data == 3) {
+		// 	$.alert({
+		// 		title: "提示",
+		// 		text: "你的资料正在审核中,不能重复提交",
+		// 		onOK: function () {
+		// 			//点击确认
+		// 			location.href = "/ycglj/mobile/asset";
+		// 		}
+		// 	});
+		// } else if (data == 1) {
+		// 	$.alert({
+		// 		title: "提示",
+		// 		text: "你的资料审核",
+		// 		onOK: function () {
+		// 			//点击确认
+		// 			location.href = "/ycglj/mobile/asset";
+		// 		}
+		// 	});
+		// }
+		// });
+		// function getLicense(license) {
+		// 	setActionSheet("license", license);
+		// 	licenseImg.push("img" + license);
+		// }
 
-		function getBusiness(license) {
-			setActionSheet("business", license);
-			licenseImg.push("zz" + license);
-		}
+		// function getBusiness(license) {
+		// 	setActionSheet("business", license);
+		// 	licenseImg.push("zz" + license);
+		// }
 
-		function setActionSheet(dataType, license) {
-
+		function setActionSheet(dataType) {
 			var images = {
 				localId: [],
 				serverId: []
 			};
-
 			wx.chooseImage({
 				success: function (res) {
 					images.localId = res.localIds;
@@ -253,8 +259,7 @@
 								//返回图片的服务器端ID res.serverId,然后调用wxImgCallback函数进行下载图片操作
 								wxImgCallback(
 									dataType,
-									res.serverId,
-									license
+									res.serverId
 								);
 								//   images.serverId.push(res.serverId);
 								if (i < length) {
@@ -273,10 +278,8 @@
 			});
 
 		}
-
-		function wxImgCallback(dataType, serverId, license) {
+		function wxImgCallback(dataType, serverId) {
 			console.log("serverId=" + serverId);
-			console.log("license=" + license);
 			//将serverId传给wx_upload.php的upload方法
 			var url = "../../../file/upload.do";
 			$.get(
@@ -285,8 +288,7 @@
 					campusId: 1,
 					serverId: serverId,
 					dataType: dataType,
-					classType: "user",
-					license: license
+					classType: "user"
 				},
 				function (text) {
 					console.log(text);
@@ -304,230 +306,99 @@
 					} else if (data == 1) {
 						//存储到服务器成功后的处理
 						// location.reload();
-
-						var panel = document
-							.createElement("div");
-						panel
-							.setAttribute(
-								"class",
-								"weui-panel__bd");
-						var a = document
-							.createElement("a");
-						a.setAttribute("class",
-							"weui_grid");
-						var a = document
-							.createElement("a");
-						a
-							.setAttribute(
-								"href",
-								"javascript:void(0);");
-						a
-							.setAttribute(
-								"class",
-								"weui-media-box weui-media-box_appmsg");
-						var div = document
-							.createElement("div");
-						div
-							.setAttribute(
-								"class",
-								"weui-media-box__hd");
-
+						var panel = document.createElement("div");
+						panel.setAttribute("class", "weui-panel__bd");
+						var a = document.createElement("a");
+						a.setAttribute("class", "weui_grid");
+						var a = document.createElement("a");
+						a.setAttribute("href", "javascript:void(0);");
+						a.setAttribute("class", "weui-media-box weui-media-box_appmsg");
+						var div = document.createElement("div");
+						div.setAttribute("class", "weui-media-box__hd");
 						src = img;
-						var img = document
-							.createElement("img");
-						img
-							.setAttribute(
-								"class",
-								"weui-media-box__thumb");
-						img.setAttribute("src",
-							src);
+						var img = document.createElement("img");
+						img.setAttribute("class", "weui-media-box__thumb");
+						img.setAttribute("src", src);
 
 						div.appendChild(img);
 
-						div2 = document
-							.createElement("div");
-						div2
-							.setAttribute(
-								"class",
-								"weui-media-box__bd");
-						p = document
-							.createElement("p");
-						p
-							.setAttribute(
-								"class",
-								"weui-media-box__desc");
+						div2 = document.createElement("div");
+						div2.setAttribute("class", "weui-media-box__bd");
+						p = document.createElement("p");
+						p.setAttribute("class", "weui-media-box__desc");
 						div2.appendChild(p);
 						a.appendChild(div);
 						a.appendChild(div2);
 						panel.appendChild(a);
 
-						if (dataType == "identity") {
-							document
-								.getElementById("img1").innerHTML = "";
-							$("#img1").attr(
-								"name",
-								uuid);
-							$("#img1").append(
-								panel);
-						} else if (dataType == "conIdentity") {
+						if (dataType == "bg1") {
+							document.getElementById("img1").innerHTML = "";
+							$("#img1").attr("name", uuid);
+							$("#img1").append(panel);
+						} else if (dataType == "bg2") {
 							document.getElementById("img2").innerHTML = "";
 							$("#img2").attr("name", uuid);
 							$("#img2").append(panel);
-						} else if (dataType == "license") {
-							document.getElementById("img" + license).innerHTML = "";
-							$("#img" + license).attr("name", uuid);
-							$("#img" + license).append(panel);
-						} else if (dataType == "business") {
-							document.getElementById("zz" + license).innerHTML = "";
-							$("#zz" + license).attr("name", uuid);
-							$("#zz" + license).append(panel);
+						} else if (dataType == "bg3") {
+							document.getElementById("img2").innerHTML = "";
+							$("#img3").attr("name", uuid);
+							$("#img3").append(panel);
+						} else if (dataType == "bg4") {
+							document.getElementById("img2").innerHTML = "";
+							$("#img4").attr("name", uuid);
+							$("#img4").append(panel);
 						}
-						else if (dataType == "other") {
-							document.getElementById("other").innerHTML = "";
-							$("#other").attr("name", uuid);
-							$("#other").append(panel);
+						else if (dataType == "bg5") {
+							document.getElementById("img2").innerHTML = "";
+							$("#img5").attr("name", uuid);
+							$("#img5").append(panel);
 						}
 
 					}
 				});
 		}
 
-		$(document).ready(
-			function () {
+		$(document).ready(function () {
 
-				var license = [];
-				$.ajax({
-					url: "/ycglj/mobile/user/getUserLicense.do",
-					data: {
+			//提交
+			$("#submit").click(function () {
+				var changeName = "", changeValue = "";
+				var name = $('#name').val()
+				var address = $('#address').val()
+				if (name != "") {
+					changeName = "name"
+					changeValue = name
+				}
+				else if (address != "") {
+					changeName = "address"
+					changeValue = address
+				}
+
+				$.post(
+					"/ycglj/mobile/asset/updateAffire.do",
+					{
+						type: 6,
+						changeName: changeName,
+						changeValue: changeValue
 					},
-					type: "GET",
-					success: function (data) {
-						console.log(data);
-						licenseData = JSON.parse(data);
-						// console.log(data);
-						// license = data[1].license;
-						console.log(data.length);
-						console.log(licenseData);
+					function (text) {
+						console.log(text);
+						if (text == 1) {
+							$.alert({
+								title: "",
+								text: "成功",
+								onOK: function () {
+									//点击确认
+									location.href = "../index.html";
+								}
+							});
 
-						for (i = 0; i < licenseData.length; i++) {
-							license.push(licenseData[i].license);
-							$("[name='more']").append('<a class="weui-cell weui-cell_access" onclick="getBusiness(' + licenseData[i].license + ')" href="javascript:;">' +
-								'<div  id="zz' + licenseData[i].license + '" name="0" class="weui-panel__bd">' +
-								'</div>' +
-								'<div class="weui-cell__bd">' +
-								'<p>' + licenseData[i].license + '工商营业执照' + (i + 1) + '</p>' +
-								'</div>' +
-								'<div id="front" class="weui-cell__ft"><svg class="icon" aria-hidden="true">' +
-								'<use xlink: href="#icon-paizhao"></use>' +
-								'</svg></div>' +
-								'</a >' +
-								'<a class="weui-cell weui-cell_access" onclick="getLicense(' + licenseData[i].license + ')" href="javascript:;">' +
-								'<div  id="img' + licenseData[i].license + '" name="0" class="weui-panel__bd">' +
-								'</div>' +
-								'<div class="weui-cell__bd">' +
-								'<p>' + licenseData[i].license + '许可证正本照片' + (i + 1) + '</p>' +
-								'</div>' +
-								'<div id="front" class="weui-cell__ft"><svg class="icon" aria-hidden="true">' +
-								'<use xlink: href="#icon-paizhao"></use>' +
-								'</svg></div>' +
-								'</a >'
-							);
+						} else {
 						}
-
-					}
-				});
-				//提交
-				$("#submit").click(
-					function () {
-
-						location.href = "../sucess.html";
-						// console.log("数组 " + license);
-						// var error = "";
-						// var img1 = $("#img1").attr(
-						// 	"name");
-						// if (img1 == 0) {
-						// 	error = "身份证正面照照片不能空!";
-						// }
-						// var img2 = $("#img2").attr(
-						// 	"name");
-						// if (img2 == 0) {
-						// 	error = "身份证反面照照片不能空!";
-						// }
-						// console.log("img地址不为空" + $('img [src!=""]'));
-
-						// for (let index = 0; index < license.length; index++) {
-						// 	if ($('img' + license[index]).attr("name") == 0) {
-						// 		error = "许可证号正本不能为空!";
-						// 	}
-						// 	else if ($('zz' + license[index]).attr("name")) {
-						// 		error = "营业执照不能为空!";
-						// 	}
-						// }
-						// var img3 = $("#other").attr(
-						// 	"name");
-						// var img4 = $("#displayarea")
-						// 	.attr("name");
-						// if (img4 == 0) {
-						// 	error = "签名不能空!";
-						// }
-
-						// if (error != "") {
-
-						// 	$.alert({
-						// 		title: "",
-						// 		text: error,
-						// 		onOK: function () {
-						// 			//点击确认
-						// 		}
-						// 	});
-
-						// } else {
-						// 	var arrays = new Array(
-						// 		img1, img2, img4);
-
-						// 	var i;
-						// 	for (i in licenseImg) {
-						// 		arrays.push($("#" + licenseImg[i] + "").attr("name"));
-						// 	}
-						// 	if (img3 != null && img3 != 0 && img3 != "") {
-						// 		arrays.push(img3);
-						// 	}
-						// 	console.log('保存图片数组的id' + arrays);
-
-						// 	console.log("arrays=" + arrays);
-						// 	$.post(
-						// 		"/ycglj/mobile/user/updateAffire.do",
-						// 		{
-						// 			arrays: JSON
-						// 				.stringify(arrays)
-						// 		},
-						// 		function (
-						// 			text) {
-						// 			console.log(text);
-						// 			if (text == 1) {
-
-						// 				$
-						// 					.alert({
-						// 						title: "",
-						// 						text: "成功",
-						// 						onOK: function () {
-						// 							//点击确认
-						// 							location.href = "/ycglj/mobile/asset";
-						// 						}
-						// 					});
-
-						// 			} else {
-
-						// 			}
-
-						// 		});
-
-						// }
-
-					})
+					});
 			})
+		})
 	</script>
-	<!-- <script type="text/jscript" src="js/jSignature.min.noconflict.js"></script> -->
 </body>
 
 </html>
